--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,10 +3,12 @@
     <string name="drawer_account">Manage Account</string>
     <string name="drawer_settings">Settings</string>
     <string name="drawer_posts">My Feed</string>
+    <string name="drawer_map_feed">Map Feed</string>
     <string name="drawer_upvotes">My Upvotes</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="search_by_location">Search By Location</string>
     <string name="add_issue_title">Upload</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
